format - page new

--- a/news.html
+++ b/news.html
@@ -19,6 +19,9 @@
     rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="libs/OwlCarousel/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="libs/OwlCarousel/assets/owl.theme.default.min.css">
+  <link rel="stylesheet" href="libs/OwlCarousel/assets/owl.theme.green.min.css">
 
 </head>
 
@@ -29,17 +32,15 @@
       <div class="container">
         <div class="wp-newest">
           <h1 class="title-main">Kinh nghiem hay</h1>
-          <div class="row">
-            <div class="col-md-6">
-              <a href="" class="thumbnail">
-                <img src="https://source.unsplash.com/random" alt="">
-              </a>
-            </div>
-            <div class="col-md-6">
+          <div class="wp-newest-inner">
+            <a href="" class="thumbnail">
+              <img src="https://source.unsplash.com/random" alt="">
+            </a>
+            <div class="tex1t">
               <div class="wp-newest-content">
                 <div class="wp-newest-main">
                   <button class="btn-text-xs btn-newest">New</button>
-                  <p class="create-time-post time-newest"><img srcset="./img/time-circle.png 2x" alt=""><span>Thu 2,
+                  <p class="create-time time-newest"><img srcset="./img/time-circle.png 2x" alt=""><span>Thu 2,
                       7/5/2021</span>
                   </p>
                   <h3 class="title">Mau giuong co ngan keo giai phap tiet kiem dien tich phong ngu</h3>
@@ -48,12 +49,12 @@
                     kien tao nen ve dep can phong do la mau sac khong chi trong yeu to phong thuy ma con trong thiet ke
                     tao khong gian mau sac do noi that cung la dieu kha quan trong</p>
                 </div>
-                <a href="" class="view-detail">Xem chi tiet <img srcset="./img/arrow-right.png 2x" alt=""></a>
+                <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
               </div>
             </div>
           </div>
         </div>
-        <!-- <div class="main-content">
+        <div class="list-new">
           <div class="row">
             <div class="col-md-4">
               <div class="card-post">
@@ -61,36 +62,341 @@
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
                 <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
-                <a href="" class="title">Thiet ke noi that chung cu Ademode co dien</a>
+                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
                 <p class="desc">
                   Han moi khi nghi den noi that la ban se nghi den can phong
                   day xa hoa trang le gia tri cua can phong do nhung mon do
                   vat thoi gian thi cong...
                 </p>
+                <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card-post">
+                <a href="" class="thumbnail">
+                  <img src="https://source.unsplash.com/random" alt="" />
+                </a>
+                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
+                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <p class="desc">
+                  Han moi khi nghi den noi that la ban se nghi den can phong
+                  day xa hoa trang le gia tri cua can phong do nhung mon do
+                  vat thoi gian thi cong...
+                </p>
+                <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card-post">
+                <a href="" class="thumbnail">
+                  <img src="https://source.unsplash.com/random" alt="" />
+                </a>
+                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
+                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <p class="desc">
+                  Han moi khi nghi den noi that la ban se nghi den can phong
+                  day xa hoa trang le gia tri cua can phong do nhung mon do
+                  vat thoi gian thi cong...
+                </p>
+                <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card-post">
+                <a href="" class="thumbnail">
+                  <img src="https://source.unsplash.com/random" alt="" />
+                </a>
+                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
+                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <p class="desc">
+                  Han moi khi nghi den noi that la ban se nghi den can phong
+                  day xa hoa trang le gia tri cua can phong do nhung mon do
+                  vat thoi gian thi cong...
+                </p>
+                <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card-post">
+                <a href="" class="thumbnail">
+                  <img src="https://source.unsplash.com/random" alt="" />
+                </a>
+                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
+                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <p class="desc">
+                  Han moi khi nghi den noi that la ban se nghi den can phong
+                  day xa hoa trang le gia tri cua can phong do nhung mon do
+                  vat thoi gian thi cong...
+                </p>
+                <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card-post">
+                <a href="" class="thumbnail">
+                  <img src="https://source.unsplash.com/random" alt="" />
+                </a>
+                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
+                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <p class="desc">
+                  Han moi khi nghi den noi that la ban se nghi den can phong
+                  day xa hoa trang le gia tri cua can phong do nhung mon do
+                  vat thoi gian thi cong...
+                </p>
+                <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card-post">
+                <a href="" class="thumbnail">
+                  <img src="https://source.unsplash.com/random" alt="" />
+                </a>
+                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
+                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <p class="desc">
+                  Han moi khi nghi den noi that la ban se nghi den can phong
+                  day xa hoa trang le gia tri cua can phong do nhung mon do
+                  vat thoi gian thi cong...
+                </p>
+                <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card-post">
+                <a href="" class="thumbnail">
+                  <img src="https://source.unsplash.com/random" alt="" />
+                </a>
+                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
+                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <p class="desc">
+                  Han moi khi nghi den noi that la ban se nghi den can phong
+                  day xa hoa trang le gia tri cua can phong do nhung mon do
+                  vat thoi gian thi cong...
+                </p>
+                <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card-post">
+                <a href="" class="thumbnail">
+                  <img src="https://source.unsplash.com/random" alt="" />
+                </a>
+                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
+                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <p class="desc">
+                  Han moi khi nghi den noi that la ban se nghi den can phong
+                  day xa hoa trang le gia tri cua can phong do nhung mon do
+                  vat thoi gian thi cong...
+                </p>
+                <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card-post">
+                <a href="" class="thumbnail">
+                  <img src="https://source.unsplash.com/random" alt="" />
+                </a>
+                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
+                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <p class="desc">
+                  Han moi khi nghi den noi that la ban se nghi den can phong
+                  day xa hoa trang le gia tri cua can phong do nhung mon do
+                  vat thoi gian thi cong...
+                </p>
+                <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card-post">
+                <a href="" class="thumbnail">
+                  <img src="https://source.unsplash.com/random" alt="" />
+                </a>
+                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
+                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <p class="desc">
+                  Han moi khi nghi den noi that la ban se nghi den can phong
+                  day xa hoa trang le gia tri cua can phong do nhung mon do
+                  vat thoi gian thi cong...
+                </p>
+                <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card-post">
+                <a href="" class="thumbnail">
+                  <img src="https://source.unsplash.com/random" alt="" />
+                </a>
+                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
+                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <p class="desc">
+                  Han moi khi nghi den noi that la ban se nghi den can phong
+                  day xa hoa trang le gia tri cua can phong do nhung mon do
+                  vat thoi gian thi cong...
+                </p>
+                <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
               </div>
             </div>
           </div>
-        </div> -->
-        <ul class="pagi mt-5">
+        </div>
+        <ul class="pagi pagi-list-new">
           <li class="pagi-item pagi-action pagi-prev is-disabled">
-            <i class="fa fa-angle-left"></i>
+            <a href=""><i class="fa fa-angle-left"></i></a>
           </li>
-          <li class="pagi-item is-active">1</li>
-          <li class="pagi-item">2</li>
-          <li class="pagi-item">3</li>
-          <li class="pagi-item">4</li>
-          <li class="pagi-item">5</li>
+          <li class="pagi-item is-active"><a href="">1</a></li>
+          <li class="pagi-item"><a href="">2</a></li>
+          <li class="pagi-item"><a href="">3</a></li>
+          <li class="pagi-item"><a href="">4</a></li>
+          <li class="pagi-item"><a href="">5</a></li>
           <li class="pagi-item pagi-action pagi-next">
-            <i class="fa fa-angle-right"></i>
+            <a href=""><i class="fa fa-angle-right"></i></a>
           </li>
         </ul>
+        <section class="customer">
+          <div class="container">
+            <div class="sub-title">
+              <h2>Đối tác</h2>
+              <p>Những dự án nổi bật làm nên tên tuổi của Kiến Trúc & Nội Thất Minh Đức</p>
+            </div>
+
+            <div class="owl-carousel owl-theme customer-slider">
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/go-viet.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/Vingroup.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/muong-thanh.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/melisa.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/biluxury.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/go-viet.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/Vingroup.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/muong-thanh.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/melisa.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/biluxury.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/go-viet.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/Vingroup.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/muong-thanh.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/melisa.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/biluxury.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/go-viet.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/Vingroup.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/muong-thanh.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/melisa.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/biluxury.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/go-viet.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/Vingroup.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/muong-thanh.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/melisa.svg" alt="" />
+                </div>
+              </div>
+              <div class="item">
+                <div class="customer-item">
+                  <img src="./img/biluxury.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
       </div>
-    </main>
-    <footer class="footer"></footer>
+  </div>
+  </section>
+  </div>
+  </main>
+  <footer class="footer"></footer>
   </div>
 
   <script src="libs/jquery-3.4.1.min.js"></script>
   <script src="libs/bootstrap/js/bootstrap.min.js"></script>
+  <script src="libs/OwlCarousel/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
