--- a/css/projects.html
+++ b/css/projects.html
@@ -38,14 +38,14 @@
             <li><a href="">Showroom</a></li>
           </ul>
         </div>
-        <div class="list-project">
+        <div class="main-content">
           <div class="row">
             <div class="col-md-4">
               <div class="card-post">
                 <a href="" class="thumbnail">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
-                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
+                <p class="create-time-post"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
                 </p>
                 <a href="" class="title">Thiet ke noi that chung cu Ademode co dien</a>
                 <p class="desc">
@@ -60,7 +60,7 @@
                 <a href="" class="thumbnail">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
-                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
+                <p class="create-time-post"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
                 </p>
                 <a href="" class="title">Thiet ke noi that chung cu Ademode co dien</a>
                 <p class="desc">
@@ -75,7 +75,7 @@
                 <a href="" class="thumbnail">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
-                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
+                <p class="create-time-post"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
                 </p>
                 <a href="" class="title">Thiet ke noi that chung cu Ademode co dien</a>
                 <p class="desc">
@@ -90,7 +90,7 @@
                 <a href="" class="thumbnail">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
-                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
+                <p class="create-time-post"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
                 </p>
                 <a href="" class="title">Thiet ke noi that chung cu Ademode co dien</a>
                 <p class="desc">
@@ -105,7 +105,7 @@
                 <a href="" class="thumbnail">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
-                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
+                <p class="create-time-post"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
                 </p>
                 <a href="" class="title">Thiet ke noi that chung cu Ademode co dien</a>
                 <p class="desc">
@@ -120,7 +120,7 @@
                 <a href="" class="thumbnail">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
-                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
+                <p class="create-time-post"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
                 </p>
                 <a href="" class="title">Thiet ke noi that chung cu Ademode co dien</a>
                 <p class="desc">
@@ -135,7 +135,7 @@
                 <a href="" class="thumbnail">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
-                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
+                <p class="create-time-post"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
                 </p>
                 <a href="" class="title">Thiet ke noi that chung cu Ademode co dien</a>
                 <p class="desc">
@@ -150,7 +150,7 @@
                 <a href="" class="thumbnail">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
-                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
+                <p class="create-time-post"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
                 </p>
                 <a href="" class="title">Thiet ke noi that chung cu Ademode co dien</a>
                 <p class="desc">
@@ -165,7 +165,7 @@
                 <a href="" class="thumbnail">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
-                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
+                <p class="create-time-post"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
                 </p>
                 <a href="" class="title">Thiet ke noi that chung cu Ademode co dien</a>
                 <p class="desc">
@@ -180,7 +180,7 @@
                 <a href="" class="thumbnail">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
-                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
+                <p class="create-time-post"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
                 </p>
                 <a href="" class="title">Thiet ke noi that chung cu Ademode co dien</a>
                 <p class="desc">
@@ -195,7 +195,7 @@
                 <a href="" class="thumbnail">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
-                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
+                <p class="create-time-post"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
                 </p>
                 <a href="" class="title">Thiet ke noi that chung cu Ademode co dien</a>
                 <p class="desc">
@@ -210,7 +210,7 @@
                 <a href="" class="thumbnail">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
-                <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
+                <p class="create-time-post"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span>
                 </p>
                 <a href="" class="title">Thiet ke noi that chung cu Ademode co dien</a>
                 <p class="desc">
