--- a/news.html
+++ b/news.html
@@ -33,17 +33,17 @@
         <div class="wp-newest">
           <h1 class="title-main">Kinh nghiem hay</h1>
           <div class="wp-newest-inner">
-            <a href="" class="thumbnail">
+            <a href="" class="thumbnail br-20">
               <img src="https://source.unsplash.com/random" alt="">
             </a>
-            <div class="tex1t">
+            <div class="pl-md-4">
               <div class="wp-newest-content">
                 <div class="wp-newest-main">
                   <button class="btn-text-xs btn-newest">New</button>
                   <p class="create-time time-newest"><img srcset="./img/time-circle.png 2x" alt=""><span>Thu 2,
                       7/5/2021</span>
                   </p>
-                  <h3 class="title">Mau giuong co ngan keo giai phap tiet kiem dien tich phong ngu</h3>
+                  <a class="title" href="">Mẫu giường có ngăn kéo - giải pháp tiết kiệm diện tích phòng ngủ</a>
                   <p class="desc">Han moi khi nghi den noi that la ban se nghi den can phong day xa hoa trang le gia tri
                     cua can phong do nhung mon do vat thoi gian thi cong Nhung dieu don gian ma cung kha quan trong de
                     kien tao nen ve dep can phong do la mau sac khong chi trong yeu to phong thuy ma con trong thiet ke
@@ -58,180 +58,170 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card-post">
-                <a href="" class="thumbnail">
+                <a href="" class="thumbnail br-20">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
                 <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
                 <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
                 <p class="desc">
-                  Han moi khi nghi den noi that la ban se nghi den can phong
-                  day xa hoa trang le gia tri cua can phong do nhung mon do
-                  vat thoi gian thi cong...
+                  Được thành lập từ ngày 12/8/2009. Mã số doanh nghiệp: 0200964322. Với hơn 10 năm thành lập đến nay,
+                  chúng tôi không ngừng nỗ lực mở rộng..
                 </p>
                 <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card-post">
-                <a href="" class="thumbnail">
+                <a href="" class="thumbnail br-20">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
                 <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
-                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <a href="" class="title">Mẫu giường cho bé gái và bé trai đẹp hiện đại nhất năm 2021</a>
                 <p class="desc">
-                  Han moi khi nghi den noi that la ban se nghi den can phong
-                  day xa hoa trang le gia tri cua can phong do nhung mon do
-                  vat thoi gian thi cong...
+                  Được thành lập từ ngày 12/8/2009. Mã số doanh nghiệp: 0200964322. Với hơn 10 năm thành lập đến nay,
+                  chúng tôi không ngừng nỗ lực mở rộng..
                 </p>
                 <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card-post">
-                <a href="" class="thumbnail">
+                <a href="" class="thumbnail br-20">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
                 <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
-                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <a href="" class="title">Ý tưởng thiết kế phòng ngủ không cần giường mới lạ ít ai biết</a>
                 <p class="desc">
-                  Han moi khi nghi den noi that la ban se nghi den can phong
-                  day xa hoa trang le gia tri cua can phong do nhung mon do
-                  vat thoi gian thi cong...
+                  Được thành lập từ ngày 12/8/2009. Mã số doanh nghiệp: 0200964322. Với hơn 10 năm thành lập đến nay,
+                  chúng tôi không ngừng nỗ lực mở rộng..
                 </p>
                 <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card-post">
-                <a href="" class="thumbnail">
+                <a href="" class="thumbnail br-20">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
                 <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
                 <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
                 <p class="desc">
-                  Han moi khi nghi den noi that la ban se nghi den can phong
-                  day xa hoa trang le gia tri cua can phong do nhung mon do
-                  vat thoi gian thi cong...
+                  Được thành lập từ ngày 12/8/2009. Mã số doanh nghiệp: 0200964322. Với hơn 10 năm thành lập đến nay,
+                  chúng tôi không ngừng nỗ lực mở rộng..
                 </p>
                 <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card-post">
-                <a href="" class="thumbnail">
+                <a href="" class="thumbnail br-20">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
                 <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
-                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <a href="" class="title">Mẫu giường cho bé gái và bé trai đẹp hiện đại nhất năm 2021</a>
                 <p class="desc">
-                  Han moi khi nghi den noi that la ban se nghi den can phong
-                  day xa hoa trang le gia tri cua can phong do nhung mon do
-                  vat thoi gian thi cong...
+                  Được thành lập từ ngày 12/8/2009. Mã số doanh nghiệp: 0200964322. Với hơn 10 năm thành lập đến nay,
+                  chúng tôi không ngừng nỗ lực mở rộng..
                 </p>
                 <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card-post">
-                <a href="" class="thumbnail">
+                <a href="" class="thumbnail br-20">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
                 <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
-                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <a href="" class="title">Ý tưởng thiết kế phòng ngủ không cần giường mới lạ ít ai biết</a>
                 <p class="desc">
-                  Han moi khi nghi den noi that la ban se nghi den can phong
-                  day xa hoa trang le gia tri cua can phong do nhung mon do
-                  vat thoi gian thi cong...
+                  Được thành lập từ ngày 12/8/2009. Mã số doanh nghiệp: 0200964322. Với hơn 10 năm thành lập đến nay,
+                  chúng tôi không ngừng nỗ lực mở rộng..
                 </p>
                 <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card-post">
-                <a href="" class="thumbnail">
+                <a href="" class="thumbnail br-20">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
                 <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
                 <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
                 <p class="desc">
-                  Han moi khi nghi den noi that la ban se nghi den can phong
-                  day xa hoa trang le gia tri cua can phong do nhung mon do
-                  vat thoi gian thi cong...
+                  Được thành lập từ ngày 12/8/2009. Mã số doanh nghiệp: 0200964322. Với hơn 10 năm thành lập đến nay,
+                  chúng tôi không ngừng nỗ lực mở rộng..
                 </p>
                 <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card-post">
-                <a href="" class="thumbnail">
+                <a href="" class="thumbnail br-20">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
                 <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
-                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <a href="" class="title">Mẫu giường cho bé gái và bé trai đẹp hiện đại nhất năm 2021</a>
                 <p class="desc">
-                  Han moi khi nghi den noi that la ban se nghi den can phong
-                  day xa hoa trang le gia tri cua can phong do nhung mon do
-                  vat thoi gian thi cong...
+                  Được thành lập từ ngày 12/8/2009. Mã số doanh nghiệp: 0200964322. Với hơn 10 năm thành lập đến nay,
+                  chúng tôi không ngừng nỗ lực mở rộng..
                 </p>
                 <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card-post">
-                <a href="" class="thumbnail">
+                <a href="" class="thumbnail br-20">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
                 <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
-                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <a href="" class="title">Ý tưởng thiết kế phòng ngủ không cần giường mới lạ ít ai biết</a>
                 <p class="desc">
-                  Han moi khi nghi den noi that la ban se nghi den can phong
-                  day xa hoa trang le gia tri cua can phong do nhung mon do
-                  vat thoi gian thi cong...
+                  Được thành lập từ ngày 12/8/2009. Mã số doanh nghiệp: 0200964322. Với hơn 10 năm thành lập đến nay,
+                  chúng tôi không ngừng nỗ lực mở rộng..
                 </p>
                 <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card-post">
-                <a href="" class="thumbnail">
+                <a href="" class="thumbnail br-20">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
                 <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
                 <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
                 <p class="desc">
-                  Han moi khi nghi den noi that la ban se nghi den can phong
-                  day xa hoa trang le gia tri cua can phong do nhung mon do
-                  vat thoi gian thi cong...
+                  Hẳn mỗi khi nghĩ đến nội thất là bạn sẽ nghĩ đến căn phòng đầy xa hoa tráng lệ, giá trị của căn phòng
+                  đó, những món đồ vật, thời gian thi công... Nhưng điều đơn giản mà cũng khá quan trọng để kiến tạo nên
+                  vẻ đẹp căn phòng đó là màu sắc. không chỉ trong yếu tố phong thủy mà còn trong thiết kế tạo không
+                  gian, màu sắc đồ nội thất cũng là điều khá quan trọng.
                 </p>
                 <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card-post">
-                <a href="" class="thumbnail">
+                <a href="" class="thumbnail br-20">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
                 <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
-                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <a href="" class="title">Mẫu giường cho bé gái và bé trai đẹp hiện đại nhất năm 2021</a>
                 <p class="desc">
-                  Han moi khi nghi den noi that la ban se nghi den can phong
-                  day xa hoa trang le gia tri cua can phong do nhung mon do
-                  vat thoi gian thi cong...
+                  Được thành lập từ ngày 12/8/2009. Mã số doanh nghiệp: 0200964322. Với hơn 10 năm thành lập đến nay,
+                  chúng tôi không ngừng nỗ lực mở rộng..
                 </p>
                 <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card-post">
-                <a href="" class="thumbnail">
+                <a href="" class="thumbnail br-20">
                   <img src="https://source.unsplash.com/random" alt="" />
                 </a>
                 <p class="time"><img srcset="./img/time-circle.png 2x" alt=""><span>Thứ 2, 7/5/2021</span></p>
-                <a href="" class="title">Tổng hợp mẫu cầu thang đẹp theo xu hướng mới nhất năm 2021</a>
+                <a href="" class="title">Ý tưởng thiết kế phòng ngủ không cần giường mới lạ ít ai biết</a>
                 <p class="desc">
-                  Han moi khi nghi den noi that la ban se nghi den can phong
-                  day xa hoa trang le gia tri cua can phong do nhung mon do
-                  vat thoi gian thi cong...
+                  Được thành lập từ ngày 12/8/2009. Mã số doanh nghiệp: 0200964322. Với hơn 10 năm thành lập đến nay,
+                  chúng tôi không ngừng nỗ lực mở rộng..
                 </p>
                 <a href="" class="view-detail">Xem chi tiết <img srcset="./img/arrow-right.png 2x" alt=""></a>
               </div>
@@ -256,6 +246,10 @@
             <div class="sub-title">
               <h2>Đối tác</h2>
               <p>Những dự án nổi bật làm nên tên tuổi của Kiến Trúc & Nội Thất Minh Đức</p>
+              <div class="bg-left">
+                <div class="bg-top"></div>
+                <div class="bg-bottom"></div>
+              </div>
             </div>
 
             <div class="owl-carousel owl-theme customer-slider">
@@ -386,12 +380,10 @@
               </div>
             </div>
           </div>
+        </section>
       </div>
-  </div>
-  </section>
-  </div>
-  </main>
-  <footer class="footer"></footer>
+    </main>
+    <footer class="footer"></footer>
   </div>
 
   <script src="libs/jquery-3.4.1.min.js"></script>
